AC_INIT([MatrixAlgebraLibrary], [0.1], [nbock@lanl.gov])
AM_INIT_AUTOMAKE

# Identify compilers.
AC_PROG_CC

# Find libtool.
AC_PROG_LIBTOOL

# Check for assert macros.
AC_HEADER_ASSERT

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
Makefile
interface/Makefile
interface/f90/Makefile
src/Makefile
tests/Makefile
])

AC_OUTPUT
